@@ -1,1 +1,4 @@
-There are currently no upgrading notes.
+2010/08/01
+    From now on, open smppbox needs to be compiled with Kannel sources
+    later than 2010/07/28 because the dlr_find function prototype
+    has been changed.
